--- a/src/content/recherche/astro/astro-membres.mdx
+++ b/src/content/recherche/astro/astro-membres.mdx
@@ -7,24 +7,27 @@ joomlaid: 39
 category: "astro"
 layout: "recherche"
 menus:
-  main:
-    identifier: "recherche/univers-a-haute-energie/astro/membres"
-    name: "Membres"
-    parent: "recherche/univers-a-haute-energie/astro"
+main:
+identifier: "recherche/univers-a-haute-energie/astro/membres"
+name: "Membres"
+parent: "recherche/univers-a-haute-energie/astro"
 ---
+import Members from "components/members.jsx"
+
+
 **Responsable de CODALEMA : Lilian Martin**
 -------------------------------------------
 
 La composition actuelle de l'équipe de recherche est la suivante :
 
-{loadposition membres}
+<Members group="astro"/>
 
 De nombreuses personnes des services techniques de Subatech sont ou ont été impliquées à des degrés divers dans nos activités de recherche :
 
 *   Yann Bortoli, Hervé Carduner et Sylvain Fresneau du [service mécanique](/services-techniques-et-administration/mecanique/presentation),
 *   Stéphane Acounis, Jean-Luc Beney, Didier Charrier, Frédéric Lefèvre, Louis-Marie Rigalleau et Didier Roy du [service électronique](/services-techniques-et-administration/electronique/service-electronique).
 
-Depuis sa création, plusieurs personnes ont fait partie puis quitté le groupe. La liste de ces personnes, donnée par ordre chronologique inverse, est la suivante :
+    Depuis sa création, plusieurs personnes ont fait partie puis quitté le groupe. La liste de ces personnes, donnée par ordre chronologique inverse, est la suivante :
 
 *   Florian Gaté - Doctorant
 *   Marin Vincent - PostDoc.
