Introduce Dark Mode (autoselection so far)

--- a/src/content/recherche/plasma/menu.mdx
+++ b/src/content/recherche/plasma/menu.mdx
@@ -2,6 +2,6 @@
 aside: true
 ---
 
-- [Présentation](../presentation-groupe-plasma)
-- [Activités de recherche](../recherche)
-- [Membres](../plasma-membres)
+- [Présentation](presentation-groupe-plasma)
+- [Activités de recherche](recherche)
+- [Membres](plasma-membres)
