wip - almost solved the RightMenu stuff

--- a/site/src/content/recherche/plasma/menu.mdx
+++ b/site/src/content/recherche/plasma/menu.mdx
@@ -1,13 +1,17 @@
 ---
 aside: true
+component: "RightSideMenu"
 ---
 
-- [Présentation](/recherche/plasma/presentation-groupe-plasma)
-- [Activités de recherche](/recherche/plasma/recherche)
-- [Membres](/recherche/plasma/plasma-membres)
-- [Publications](/recherche/plasma/publications-plasma)
-- [Equipements, méthodes et techniques](/recherche/plasma/equipements-methodes-et-techniques)
-- [Présentations de conférences, séminaires et posters](/recherche/plasma/presentations-de-conferences-seminaires-et-posters)
-- [Thèses](/recherche/plasma/theses)
-- [Contact](/recherche/plasma/contacts)
-- [Liens](/recherche/plasma/liens)
+## Equipe Plasma
+
+-   [Présentation](/recherche/plasma/presentation-groupe-plasma)
+-   [Activités de recherche](/recherche/plasma/recherche)
+-   [Membres](/recherche/plasma/plasma-membres)
+-   [Publications](/recherche/plasma/publications-plasma)
+-   [Equipements, méthodes et techniques](/recherche/plasma/equipements-methodes-et-techniques)
+-   [Présentations de conférences, séminaires et posters](/recherche/plasma/presentations-de-conferences-seminaires-et-posters)
+-   [Thèses](/recherche/plasma/theses)
+-   [Contact](/recherche/plasma/contacts)
+-   [Liens](/recherche/plasma/liens)
+-   <a href="toto">toto</a>
