RightSideMenu almost ok

--- a/site/src/content/recherche/plasma/plasma-extra.mdx
+++ b/site/src/content/recherche/plasma/plasma-extra.mdx
@@ -2,4 +2,7 @@
 aside: true
 ---
 
-## H2: this is extra aside for plasma
+## This is an extra aside for plasma, with video
+
+<iframe width="auto" height="auto" src="https://www.youtube.com/embed/yWBWzIUCNpw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
