--- a/site/src/content/recherche/theorie/theorie-membres.mdx
+++ b/site/src/content/recherche/theorie/theorie-membres.mdx
@@ -3,6 +3,7 @@ title: "Membres"
 date: "2011-12-08 14:18:50 +0000 UTC"
 lastmod: "2012-07-11 13:18:23 +0000 UTC"
 layout: "recherche"
+asides: ["theorie.+menu+"]
 ---
 
 import Members from "gatsby-theme-ldap/src/components/Members"
