--- a/site/src/content/general/tutelles2.mdx
+++ b/site/src/content/general/tutelles2.mdx
@@ -7,10 +7,15 @@ joomlaid: 223
 category: "General"
 asides: ["General.+menu+"]
 ---
+
+import LogoGroup1 from "./LogoGroup1"
+import LogoGroup2 from "./LogoGroup2"
+
 Le laboratoire SUBATECH est une Unité Mixte de Recherche (UMR 6457), entre l’Institut National de Physique Nucléaire et de Physique des Particules ([IN2P3](http://www.in2p3.fr/)) du [CNRS](http://www.cnrs.fr/), [L'IMT Atlantique Bretagne-Pyas de la Loire](http://www.mines-nantes.fr/) et l’[Université de Nantes](http://www.univ-nantes.fr/).
 
-[![Université de Nantes](images/logo_univ_nantes.jpg)](http://www.univ-nantes.fr/) [![in2p3filaire](images/in2p3filaire.png)](http://www.in2p3.fr/) [![CP IMTA leger](images/CP-IMTA-leger.jpg)](http://www.mines-nantes.fr/)
+<LogoGroup1 />
 
 A travers ces deux dernières tutelles, il fait partie du Pôle de Recherche et d'Enseignement Supérieur [L'UBL](http://www.lunam.fr). Il est membre de l’Observatoire des Sciences de l’univers Nantes Atlantique [OSUNA](http://www.osuna.univ-nantes.fr/) et est adossé à l’école doctorale régionale [3MPL](http://3mpl.univ-angers.fr/) (Molécules, Matières et Matériaux en Pays de Loire). Il relève du périmètre de [l'Institut Carnot M.I.N.E.S](http://www.carnot-mines.eu/).
 
-[![UBLlogo](images/UBLlogo.jpg)](http://www.lunam.fr) [![Logo OSUNA](images/Logo_OSUNA.jpg)](http://www.osuna.univ-nantes.fr/) [![3MPL](images/3MPL.png)](http://3mpl.univ-angers.fr)[![Logo Institut Carnot M.I.N.E.S. logo 2](images/Logo-Institut-Carnot-M.I.N.E.S.-logo-2.jpg)](http://www.carnot-mines.eu)
+<LogoGroup2 />
+
