--- a/site/src/content/recherche/recherche.mdx
+++ b/site/src/content/recherche/recherche.mdx
@@ -7,6 +7,10 @@ joomlaid: 84
 category: "Recherche"
 asides: ["Recherche.+menu+"]
 ---
+
+import LogoGroup from "components/LogoGroup"
+import logos from "./logos.json"
+
 Les activités de recherche de SUBATECH gravitent autour d’un domaine, le nucléaire, que ce soit dans ses aspects les plus fondamentaux ou très appliqués, tant expérimentaux que théoriques, avec des recherches menées à la fois dans le domaine de la physique nucléaire et de la chimie nucléaire.
 
 *   Radiochimie
@@ -21,10 +25,14 @@ Les activités de recherche de SUBATECH gravitent autour d’un domaine, le nucl
     *   Le [Xenon liquide](/recherche/xenon/presentation) au service de l'imagerie médicale et de la recherche de la matière noire
     *   L'observation des neutrinos pour l'étude de leurs propriétés fondamentales à travers les expériences [Double Chooz](fr/recherche/univers-a-haute-energie/neutrino/activites-de-recherche/double-chooz), [SoLid](fr/recherche/univers-a-haute-energie/neutrino/activites-de-recherche/solid) et [Juno](fr/recherche/univers-a-haute-energie/neutrino/activites-de-recherche/juno) ou l'étude du flux de neutrinos astrophysiques de haute énergie avec l'expérience [KM3NeT](fr/recherche/univers-a-haute-energie/neutrino/activites-de-recherche/km3net).
 
+
 L'ensemble des activités scientifiques de SUBATECH ne se conçoit que dans un cadre international, en général au sein de collaborations relativement larges et faisant intervenir des partenaires étrangers ([ALICE](http://aliweb.cern.ch/), [Double Chooz](http://doublechooz.in2p3.fr), [XENON](http://xenon1t.org/), [KM3NeT](http://www.km3net.org/) ..). Cela sous entend la participation des équipes de recherche dans des réseaux et des structures fédératives et l'obtention de soutiens financiers auprès d'agences locales, nationales et internationales pour la réalisation de ces activités.  
+
 
 On note notamment une forte participation aux programmes d'actions européens du 6ème et [7ème PCRD](http://cordis.europa.eu/fp7/home_fr.html), l'implication dans le GDRE EUREA et l'action interdisciplinaire [PACEN](http://www.cnrs.fr/prg/PIR/programmes/energie-aval/pacen/pacen.htm) du CNRS, et enfin la participation régulière à plusieurs projets internationals de coopération scientifique ([PICS](https://dri-dae.cnrs-dir.fr/spip.php?article155)). Le taux de succès obtenu par les projets soumis par SUBATECH apparait relativement bon si l'on se refère au nombre de progammes de financement acceptés par l'[ANR](http://www.agence-nationale-recherche.fr/) et au nombre de projets qui recoivent un soutient de la part de collectivités locales notamment dans le cadre des Appels à Projets (AAP) de la [région Pays de la Loire](http://www.paysdelaloire.fr/).
 
+
 Enfin, SUBATECH est engagé avec d'autres partenaires dans plusieurs projets retenus comme [investissements d'avenir](http://www.enseignementsup-recherche.gouv.fr/pid24578/investissements-d-avenir.html) : le laboratoire d'excellence [IRON](http://cache.media.enseignementsup-recherche.gouv.fr/file/Fiches_Labex_2/65/9/IRON_207659.pdf) (Radiopharmaceutiques Innovants en Oncologie et Neurologie), l'équipement d'excellence [ARRONAX+](http://cache.media.enseignementsup-recherche.gouv.fr/file/Fiches_equipex_vague_2/00/9/ARRONAXPLUS_203009.pdf) (Nucléaire pour la Santé) et l'Institut de Recherche Technologique [Jules Verne](http://media.enseignementsup-recherche.gouv.fr/file/Fiches_IRT/39/6/Dossier_de_presentation_des_IRT_3_176396.pdf) (technologies avancées de production, composites, métalliques, structures hybrides). Ces engagements poursuivent et renforcent les implications plus anciennes dans notamment l'Institut Carnot M.I.N.E.S, dans les Pôles de compétivité [EMC2](http://www.pole-emc2.fr/) (Ensembles métalliques et Composites complexes) et Atlantic-Biothérapie ainsi qu'au Cancéropôle Grand Ouest (via les radio-éléments et le cyclotron [ARRONAX](http://www.cyclotron-nantes.fr/)).
 
-[![Image-11-2](images/Image-11-2.png)](http://cordis.europa.eu/fp7/home_fr.html)[![logoANR](images/logoANR.gif)](http://www.agence-nationale-recherche.fr/)[![RVB-PDL Institutionnel](images/RVB-PDL_Institutionnel.jpg)](http://www.paysdelaloire.fr/)[![medaille-investissements-avenir 174551.80](images/medaille-investissements-avenir_174551.80.jpg)](http://www.enseignementsup-recherche.gouv.fr/pid24578/investissements-d-avenir.html)
+<LogoGroup logos={logos} />
+
