get rid of double quotation marks

--- a/site/src/content/seminaires/2016/2016-04-05-16-00.xx.md
+++ b/site/src/content/seminaires/2016/2016-04-05-16-00.xx.md
@@ -3,10 +3,10 @@ author: "Loïck VIRONE"
 author_url: ""
 date: "2016-04-05 14:00:00 +0000 UTC"
 location: "Amphi CARNOT"
-title: "Heures Thésards, " New cryogenic processes implemented for 3γ imaging with liquid Xenon""
+title: " New cryogenic processes implemented for 3γ imaging with liquid Xenon"
 author_filiation: "Subatech (groupe Xénon)"
 author_filiation_url: ""
-type: "spécialisé"
+type: "heures-thésards"
 author2: ""
 author_url2: ""
 author_filiation2: ""
