--- a/site/src/content/seminaires/2016/2016-04-12-16-00.xx.md
+++ b/site/src/content/seminaires/2016/2016-04-12-16-00.xx.md
@@ -3,10 +3,10 @@ author: "Alexandre SUBERCAZE"
 author_url: ""
 date: "2016-04-12 14:00:00 +0000 UTC"
 location: "Amphi CARNOT"
-title: "Heures Thésards, " High energy PIGE development""
+title:  " High energy PIGE development"
 author_filiation: "Subatech (groupe Prisma)"
 author_filiation_url: ""
-type: "spécialisé"
+type: "heures-thésards"
 author2: ""
 author_url2: ""
 author_filiation2: ""
