--- a/site/src/content/seminaires/2018/2018-05-30-16-00.xx.md
+++ b/site/src/content/seminaires/2018/2018-05-30-16-00.xx.md
@@ -3,10 +3,10 @@ author: "Flávia MAIA"
 author_url: ""
 date: "2018-05-30 14:00:00 +0000 UTC"
 location: "Amphi G. Besse"
-title: "Soutenance de thèse "Impact de l'élévation de la température jusqu'à 80ºC sur le comportement des radionucléides dans la Callovo-Oxfordien : application à l'uranium""
+title: "Impact de l'élévation de la température jusqu'à 80ºC sur le comportement des radionucléides dans la Callovo-Oxfordien : application à l'uranium"
 author_filiation: "Subatech (groupe Radiochimie)"
 author_filiation_url: ""
-type: "spécialisé"
+type: "soutenance-thèse"
 author2: ""
 author_url2: ""
 author_filiation2: ""
