--- a/site/src/content/seminaires/2018/2018-07-10-16-00.xx.md
+++ b/site/src/content/seminaires/2018/2018-07-10-16-00.xx.md
@@ -3,10 +3,10 @@ author: "Kevin MICHENEAU"
 author_url: ""
 date: "2018-07-10 14:00:00 +0000 UTC"
 location: "Amphi G. Besse"
-title: "Soutenance de thèse "Étude des électrons résiduels dans XENON100""
+title: "Étude des électrons résiduels dans XENON100"
 author_filiation: "Subatech (groupe Xénon)"
 author_filiation_url: ""
-type: "spécialisé"
+type: "soutenance-thèse"
 author2: ""
 author_url2: ""
 author_filiation2: ""
