--- a/site/src/content/seminaires/2018/2018-09-21-16-30.xx.md
+++ b/site/src/content/seminaires/2018/2018-09-21-16-30.xx.md
@@ -3,10 +3,10 @@ author: "Florian Cougoulic"
 author_url: ""
 date: "2018-09-21 14:30:00 +0000 UTC"
 location: "Amphi G. Besse"
-title: "Soutenance de thèse "Nuclear effects in high-energy proton-nucleus collisions: transverse momentum broadening of energetic parton systems and soft anomalous dimension matrices""
+title: "Nuclear effects in high-energy proton-nucleus collisions: transverse momentum broadening of energetic parton systems and soft anomalous dimension matrices"
 author_filiation: "Subatech (groupe Théorie)"
 author_filiation_url: ""
-type: "spécialisé"
+type: "soutenance-thèse"
 author2: ""
 author_url2: ""
 author_filiation2: ""
