--- a/site/src/content/seminaires/2018/2018-10-17-12-00.xx.md
+++ b/site/src/content/seminaires/2018/2018-10-17-12-00.xx.md
@@ -3,10 +3,10 @@ author: "Alexandre Parent du Châtelet"
 author_url: ""
 date: "2018-10-17 10:00:00 +0000 UTC"
 location: "Amphi G. Besse"
-title: "Soutenance de thèse "Perte d'énergie par rayonnement dans un milieu opaque""
+title:  "Perte d'énergie par rayonnement dans un milieu opaque"
 author_filiation: "Subatech (groupe Théorie)"
 author_filiation_url: ""
-type: "spécialisé"
+type: "soutenance-thèse"
 author2: ""
 author_url2: ""
 author_filiation2: ""
