--- a/site/src/content/seminaires/2018/2018-10-23-16-00.xx.md
+++ b/site/src/content/seminaires/2018/2018-10-23-16-00.xx.md
@@ -3,10 +3,10 @@ author: "Gabriel Sophys"
 author_url: ""
 date: "2018-10-23 14:00:00 +0000 UTC"
 location: ""
-title: "Soutenance de thèse "Formation of a Quark-Gluon-Plasma : understanding the energy and system size dependence""
+title: "Formation of a Quark-Gluon-Plasma : understanding the energy and system size dependence"
 author_filiation: "Subatech (groupe Théorie)"
 author_filiation_url: ""
-type: "spécialisé"
+type: "soutenance-thèse"
 author2: ""
 author_url2: ""
 author_filiation2: ""
