--- a/site/src/content/seminaires/2018/2018-10-24-16-00.xx.md
+++ b/site/src/content/seminaires/2018/2018-10-24-16-00.xx.md
@@ -3,10 +3,10 @@ author: "Loïc Le Meur"
 author_url: ""
 date: "2018-10-24 14:00:00 +0000 UTC"
 location: "Amphi G. Besse"
-title: "Soutenance de thèse "Etude des propriétés de désintégration bêta de noyaux exotiques d'intérêts pour la physique des réacteurs, la structure nucléaire, et l’astrophysique nucléaire, à l’aide de la technique de Spectroscopie Gamma par Absorption Totale (TAGS)""
+title: "Etude des propriétés de désintégration bêta de noyaux exotiques d'intérêts pour la physique des réacteurs, la structure nucléaire, et l’astrophysique nucléaire, à l’aide de la technique de Spectroscopie Gamma par Absorption Totale (TAGS)"
 author_filiation: "Subatech (groupe SEN)"
 author_filiation_url: ""
-type: "spécialisé"
+type: "soutenance-thèse"
 author2: ""
 author_url2: ""
 author_filiation2: ""
