--- a/site/src/content/seminaires/2018/2018-10-30-15-00.xx.md
+++ b/site/src/content/seminaires/2018/2018-10-30-15-00.xx.md
@@ -3,10 +3,10 @@ author: "Soumaya Khalfallah"
 author_url: ""
 date: "2018-10-30 14:00:00 +0000 UTC"
 location: "Amphi PASCAL"
-title: "Soutenance de thèse "Développement des résines spécifiques au radium pour des applications environnementales et médicales / Development of new Ra specific resins for environmental and medical applications""
+title: "Développement des résines spécifiques au radium pour des applications environnementales et médicales / Development of new Ra specific resins for environmental and medical applications"
 author_filiation: "Subatech (groupe Radiochimie)"
 author_filiation_url: ""
-type: "spécialisé"
+type: "soutenance-thèse"
 author2: ""
 author_url2: ""
 author_filiation2: ""
