--- a/site/src/content/seminaires/2018/2018-12-19-15-00.xx.md
+++ b/site/src/content/seminaires/2018/2018-12-19-15-00.xx.md
@@ -3,10 +3,10 @@ author: "Maxime Robira"
 author_url: ""
 date: "2018-12-19 14:00:00 +0000 UTC"
 location: "Amphi GALLOIS"
-title: "Soutenance de thèse de Maxime Robira  "Propriétés physico-chimiques et comportement différé des matériaux cimentaires sous irradiation gamma""
+title: "Propriétés physico-chimiques et comportement différé des matériaux cimentaires sous irradiation gamma"
 author_filiation: "Subatech (groupe Radiochimie)"
 author_filiation_url: ""
-type: "spécialisé"
+type: "soutenance-thèse"
 author2: ""
 author_url2: ""
 author_filiation2: ""
