--- a/site/src/content/seminaires/2018/2018-12-21-11-30.xx.md
+++ b/site/src/content/seminaires/2018/2018-12-21-11-30.xx.md
@@ -3,10 +3,10 @@ author: "Wiem Zouari"
 author_url: ""
 date: "2018-12-21 10:30:00 +0000 UTC"
 location: "Amphi G. Besse"
-title: "Soutenance de thèse de Wiem Zouari  "Étude de la solubilité de l’oxyde de zirconium et de sa réactivité de surface en milieux aqueux""
+title: "Étude de la solubilité de l’oxyde de zirconium et de sa réactivité de surface en milieux aqueux"
 author_filiation: "Subatech (groupe Radiochimie)"
 author_filiation_url: ""
-type: "spécialisé"
+type: "soutenance-thèse"
 author2: ""
 author_url2: ""
 author_filiation2: ""
