--- a/site/src/content/seminaires/2016/2016-04-19-16-00.xx.md
+++ b/site/src/content/seminaires/2016/2016-04-19-16-00.xx.md
@@ -3,10 +3,10 @@ author: "Alexandre Parent du Châtelet"
 author_url: ""
 date: "2016-04-19 14:00:00 +0000 UTC"
 location: "Amphi G. Besse"
-title: "Heures Thésards, " Perte d'énergie par rayonnement et Absorption""
+title: " Perte d'énergie par rayonnement et Absorption"
 author_filiation: "Subatech (groupe Théorie)"
 author_filiation_url: ""
-type: "spécialisé"
+type: "heures-thésards"
 author2: ""
 author_url2: ""
 author_filiation2: ""
