fix stray seminars with double quotation marks

--- a/site/src/content/seminaires/2018/2018-06-22-13-00.xx.md
+++ b/site/src/content/seminaires/2018/2018-06-22-13-00.xx.md
@@ -3,7 +3,7 @@ author: "Professor Rodney C. Ewing"
 author_url: ""
 date: "2018-06-22 11:00:00 +0000 UTC"
 location: "Amphi CHARPAK"
-title: '"RESET" of America's Nuclear Waste Management Strategy and Policy'
+title: "'RESET' of America's Nuclear Waste Management Strategy and Policy"
 author_filiation: "Stanford University"
 author_filiation_url: ""
 type: "spécialisé"
