--- a/site/src/content/seminaires/2017/2017-07-03-13-00.xx.md
+++ b/site/src/content/seminaires/2017/2017-07-03-13-00.xx.md
@@ -4,7 +4,7 @@ author_url: ""
 date: "2017-07-03 11:00:00 +0000 UTC"
 location: "Amphi PASCAL"
 title: "Constraining  sub-GeV dark-matter models via analysis of electronic response of semiconductor targets"
-author_filiation: 'Post-doctorant à l'ETH de Zurich dans le groupe  "Materials Theory"'
+author_filiation: "Post-doctorant à l'ETH de Zurich dans le groupe  'Materials Theory'"
 author_filiation_url: ""
 type: "spécialisé"
 author2: ""
