--- a/site/src/content/seminaires/2018/2018-09-24-16-00.xx.md
+++ b/site/src/content/seminaires/2018/2018-09-24-16-00.xx.md
@@ -3,10 +3,10 @@ author: "Audrey Francisco"
 author_url: ""
 date: "2018-09-24 14:00:00 +0000 UTC"
 location: "Amphi G. Besse"
-title: "Soutenance de thèse "J/ψ elliptic flow measurement in Pb-Pb collisions at √sNN =5.02TeV with the muon spectrometer of ALICE at LHC"
+title: "J/ψ elliptic flow measurement in Pb-Pb collisions at √sNN =5.02TeV with the muon spectrometer of ALICE at LHC"
 author_filiation: "Subatech (groupe Plasma)"
 author_filiation_url: ""
-type: "spécialisé"
+type: "soutenance-thèse"
 author2: ""
 author_url2: ""
 author_filiation2: ""
