Add sorting exemple to test-gatsby-theme-mdx

--- a/themes/test-gatsby-theme-mdx/src/dir1/article2.en.mdx
+++ b/themes/test-gatsby-theme-mdx/src/dir1/article2.en.mdx
@@ -4,6 +4,7 @@ category: "general"
 images:
   - article-2.first.jpg
   - article-2.second.jpg
+rank: 2
 ---
 
-This is the second __article__.
+This is the second __article__, of category `general`
