wip - simplify sourcing from filesystem

--- a/themes/test-gatsby-theme-seminar/seminars/2021-02-02-14-00.md
+++ b/themes/test-gatsby-theme-seminar/seminars/2021-02-02-14-00.md
@@ -7,6 +7,8 @@ title: "De la théorie à la découverte du Radium"
 author_filiation: "Subatech (équipe Théorie)"
 author_filiation_url: "http://www-subatech.in2p3.fr"
 type: "spécialisé"
+category: "seminar"
+
 ---
 
 Fugiat laboris officia dolore officia adipisicing fugiat id occaecat do ad dolor. Officia eiusmod anim laboris et do duis officia. Irure aliquip anim duis est commodo aliquip. Sint exercitation ut sint elit ullamco consequat ad consectetur consectetur tempor velit eu Lorem. Eu velit fugiat incididunt cupidatat enim amet quis pariatur veniam consequat excepteur incididunt. Amet enim eiusmod Lorem incididunt sint qui commodo proident in reprehenderit. Est pariatur ea dolore non incididunt.
